--- a/todo.txt
+++ b/todo.txt
@@ -26,7 +26,7 @@ in the designer on full cover add barcode area, barcode area should not export t
 
 in designer text layers move padding to general area out of background ....................................OK
 in designer inspector allow to input with keyboard on sliders .............................................OK
-in the designer add option to set background color
+in the designer add option to set background color ........................................................OK
 in the designer in admin mode there is a bug covers and templates dont load on the sidebar ................OK
 
 in full cover templates add author picture and bio placeholders
