--- a/todo.txt
+++ b/todo.txt
@@ -30,7 +30,10 @@ in the designer add option to set background color .............................
 in the designer in admin mode there is a bug covers and templates dont load on the sidebar ................OK
 in designer add x,y,width,height to layers ................................................................OK
 in full cover templates add author picture and bio placeholders ...........................................OK
-when saving cover in frontend show spinner for uploading json after png
+when saving cover in frontend show spinner for uploading json after png ...................................OK
+
+in admin allow add template as long as it has one json
+in admin when uploading covers add function to crop front cover from full cover
 
 make signin/up with google work
 make forget password work
@@ -40,8 +43,6 @@ add how it works page
 add changelog page
 add user voice page
 
-in admin allow add template as long as it has one json
-in admin when uploading covers add function to crop front cover from full cover
 
 add list of members with summary of their work to admin
 add login as user to admin
